--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -21,3 +21,6 @@ when@test:
         test: true
         session:
             storage_factory_id: session.storage.factory.mock_file
+
+    imports:
+        - resource: 'nelmio_api_doc.yaml'
